fixed contrast

--- a/cheesipedia/styles/style.css
+++ b/cheesipedia/styles/style.css
@@ -189,5 +189,5 @@ body{
     border-color: #cc0000;
     background-color: #134266;
     font-size: 1.5rem;
-    color: #cc0000;
+    color: #eba619;
 }
